confdir = $(prefix)/opt/$(PACKAGE)/conf
conf_DATA = \
	cybmods.ini \
	weapons.ini \
	midipats.cfg

tone000dir = $(prefix)/opt/$(PACKAGE)/conf/Tone_000
tone000_DATA = \
	Tone_000/000_Acoustic_Grand_Piano.pat \
	Tone_000/004_Electric_Piano_1_Rhodes.pat

EXTRA_DIST = \
	conf \
	tone000 \
	fnmap_posix.conf \
	fnmap_windows.conf \
	wrappers_dos.conf \
	wrappers_game.conf \
	wrappers_libc.conf \
	wrappers_util.conf
